develop - create subscription, swagger added